<ScrollView android:id="@+id/svUserInfoForm"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp">

            <com.leenita.sindbad.view.TextViewCustomFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/local_signup_form_header"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_text_normal"
                app:fontId="1"/>

            <com.leenita.sindbad.view.TextViewCustomFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/your_account_safe"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_text_xsmall"
                app:fontId="1"/>

            <ImageView
                android:id="@+id/btnFBLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="18dp"
                android:src="@drawable/btn_fb"/>
        </LinearLayout>

        <com.leenita.sindbad.view.TextViewCustomFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_title_big"
            app:fontId="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="right"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp">

            <com.leenita.sindbad.view.TextViewCustomFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/register_manual_account_header"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_text_xsmall"
                app:fontId="1"
                />

            <com.leenita.sindbad.view.EditTextCustomFont
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="15dp"
                android:hint="@string/login_prompt_uesrname"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/txt_of_white"
                app:fontId="1"/>

            <com.leenita.sindbad.view.EditTextCustomFont
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="15dp"
                android:hint="@string/login_prompt_email"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/txt_of_white"
                app:fontId="1"/>


            <com.leenita.sindbad.view.TextViewCustomFont
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ts_text_normal"
                app:fontId="2"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>