<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/vContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.leenita.sindbad.view.TextViewCustomFont
        android:id="@+id/txtSubTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/suggest_sub_title"
        android:background="@drawable/bg_stickyheader"
        android:gravity="center_vertical"
        android:textSize="@dimen/ts_text_small"
        android:padding="10dp"
        app:fontId="1"/>

    <EditText
        android:id="@+id/etLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="10dp"
        android:drawableRight="@drawable/ic_link"
        android:drawablePadding="18dp"
        android:hint="@string/suggest_link_placeholder"
        android:padding="12dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="20dp"
        android:background="@color/gray_light"/>

    <ProgressBar
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

    <FrameLayout
        android:id="@+id/vPreviewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_dark">

        <com.leenita.sindbad.view.TextViewCustomFont
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/suggest_btn_send"
            android:background="@color/app_theme"
            android:textSize="@dimen/ts_text_normal"
            app:fontId="1"/>
    </FrameLayout>
</LinearLayout>